apps/staging/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/instance: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:1.37.0.5076-ls120
          resources:
            requests:
              cpu: 10m
              memory: 170Mi
            limits:
              memory: 400Mi
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
              subPath: prowlarr/config
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.3.25
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              memory: 400Mi
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
      securityContext:
        sysctls:
          - name: net.ipv6.conf.all.disable_ipv6
            value: "1"
